--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!--
 Requirements
-[  ] Two Different Headlines
-[  ] Bold and Italic Text
-[  ] One List
-[  ] Three Images
+[ - ] Two Different Headlines
+[ - ] Bold and Italic Text
+[ - ] One List
+[ - ] Three Images
 
 Select ONE Additional Feature to Add  
 [ no ] Feature 1 - Include at least three emojis
 [ no ] Feature 2 - Include <font> tag
 [ no ] Feature 3 - Include Underline & Highlight
-[ no ] Feature 4 - Use Square Bullets
+[ yes ] Feature 4 - Use Square Bullets
 [ no ] Feature 5 - Include a list within a list
 -->
     
@@ -20,7 +20,15 @@ Select ONE Additional Feature to Add
         <title>Unit 1 Project</title>
     </head>
     <body>
-
-        
+<h1>About Me</h1>
+        <h2>A few things...</h2>
+      <ul style="list-style-type:square">
+        <li>I'm an <strong>instrumental major</strong></li>
+          <img src="https://png.pngtree.com/png-vector/20220723/ourmid/pngtree-music-note-staves-png-image_5998981.png" width="100">
+        <li>I <em>love</em> dogs</li>
+          <img src="https://www.purina.co.uk/sites/default/files/2021-02/BREED%20Hero_0075_japanese_shiba_inu.jpg" width="100">
+        <li>I love Laufey</li>
+          <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS1Hbhy39egyud036FRc1yutqlhGBF7yrt9Ww&s" width="100">
+      </ul>
     </body>
 </html>
